--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
     <application
-        android:name=".ApplicationThreads"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,22 +10,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Clase4"
+        android:theme="@style/Theme.lab2"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity0"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:name=".MyGameActivity"
+            android:exported="false"
+            android:label="@string/title_activity_my_game"
+            android:theme="@style/Theme.lab2" />
+        <activity android:name=".MyStatisticsActivity" />
+
+<!--        <activity
+            android:name=".MainActivity3"
+            android:exported="false" />
         <activity
             android:name=".MainActivity2"
-            android:exported="true">
-        </activity>
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />-->
         <activity
-            android:name=".MainActivity3"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
