--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,34 +5,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="TeleTrivia"
         android:supportsRtl="true"
-        android:theme="@style/Theme.lab2"
-        tools:targetApi="31">
-        <activity
-            android:name=".MyGameActivity"
-            android:exported="false"
-            android:label="@string/title_activity_my_game"
-            android:theme="@style/Theme.lab2" />
-        <activity android:name=".MyStatisticsActivity" />
-
-<!--        <activity
-            android:name=".MainActivity3"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false"
-            android:parentActivityName=".MainActivity" />-->
-        <activity
-            android:name=".MainActivity"
+        android:theme="@style/Theme.TeleTrivia">
+        <activity android:name=".ResultadosActivity" />
+        <activity android:name=".TriviaActivity" />
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
